feat(core): 添加 Vue 项目构建功能并优化代码生成流程
- 在 AiCodeGeneratorServiceFactory 中增加最大消息数限制至 100 条
- 切换推理模型配置为 deepseek-reasoner 并提升 maxTokens 至327688
- 新增 VueProjectBuilder 类实现 Vue 项目的异步构建逻辑
- 引入 Guava 库支持线程工厂构建及异步任务处理
- 修改 JsonMessageStreamHandler 支持 Vue项目构建触发与日志记录
- 调整 AppServiceImpl 中代码生成类型判断，对 Vue 项目执行构建操作
- 更新 StreamHandlerExecutor 和相关依赖注入方式确保线程安全
- 修正工具调用 ID 类型为 String 提高兼容性和准确性): 实现智能代码生成类型路由与项目下载功能 新增 AiCodeGenTypeRoutingService 接口及其实现，支持根据用户提示智能选择代码生成类型
- 添加 FileWriteTool 工具类，增强文件写入安全性与参数校验
- 实现项目代码打包下载功能，支持 ZIP 格式并过滤无关文件
- 集成 COS 对象存储配置与管理器，支持截图上传
- 增加网页截图生成与定时清理临时文件功能
- 优化应用部署逻辑，异步生成并更新应用封面截图- 完善相关单元测试与异常处理机制